docs(auth): add documentation for github authentication

--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -55,6 +55,12 @@ GITHUB_APP_APP_ID=[github-app-app-id]
 GITHUB_APP_PRIVATE_KEY=[github-app-private-key]
 GITHUB_APP_INSTALLATION_URL=[github-app-installation-url]
 
+# GitHub OAuth (Sign-in)
+GITHUB_REDIRECT_URI=[server-github-auth-callback]
+GITHUB_CLIENT_ID=[github-auth-client-id]
+GITHUB_CLIENT_SECRET=[github-auth-client-secret]
+GITHUB_SCOPE=user:email
+
 # Kafka
 KAFKA_BROKERS='localhost:9092'
 KAFKA_CLIENT_ID='server-queue-client'
