--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "clean": "nx clear-cache",
     "graphql-codegen": "graphql-codegen",
     "docker:dev": "docker-compose -f docker-compose.dev.yml --env-file .env.docker-compose up",
-    "db:migrate:deploy": "nx run-many --target=db:migrate:deploy"
+    "db:migrate:deploy": "nx run-many --target=db:migrate:deploy",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "npx nx format:write",
+      "git add"
+    ]
   },
   "dependencies": {
     "@amplication/react-compound-timer": "^2.1.0",
@@ -213,12 +220,14 @@
     "generate-package-json-webpack-plugin": "^2.6.0",
     "google-libphonenumber": "^3.2.31",
     "graphql": "^15.8.0",
+    "husky": "^8.0.2",
     "jest": "^27.1.4",
     "jest-diff": "^27.1.4",
     "jest-environment-jsdom": "^27.1.4",
     "jest-environment-node": "^27.5.1",
     "jest-mock-extended": "^2.0.9",
     "json-schema-to-typescript": "^10.1.5",
+    "lint-staged": "^13.0.3",
     "normalize-path": "^3.0.0",
     "npm-run-all": "^4.1.5",
     "nx": "^14.8.2",
