chore(client): enable webpack vendor chunk

--- a/packages/amplication-client/project.json
+++ b/packages/amplication-client/project.json
@@ -61,7 +61,7 @@
           "sourceMap": false,
           "namedChunks": false,
           "extractLicenses": true,
-          "vendorChunk": false
+          "vendorChunk": true
         }
       }
     },
