--- a/nx.json
+++ b/nx.json
@@ -36,16 +36,10 @@
   },
   "targetDefaults": {
     "test": {
-      "dependsOn": [
-        "db:prisma:generate",
-        "^db:prisma:generate",
-        "^prebuild"
-      ]
+      "dependsOn": ["db:prisma:generate", "^db:prisma:generate", "^prebuild"]
     },
     "prebuild": {
-      "dependsOn": [
-        "^prebuild"
-      ]
+      "dependsOn": ["^prebuild"]
     },
     "build": {
       "dependsOn": [
@@ -56,30 +50,16 @@
       ]
     },
     "postbuild": {
-      "dependsOn": [
-        "build",
-        "^postbuild"
-      ]
+      "dependsOn": ["build", "^postbuild"]
     },
     "serve": {
-      "dependsOn": [
-        "db:prisma:generate",
-        "^db:prisma:generate",
-        "^prebuild"
-      ]
+      "dependsOn": ["db:prisma:generate", "^db:prisma:generate", "^prebuild"]
     },
     "lint": {
-      "inputs": [
-        "default",
-        "{workspaceRoot}/.eslintrc.json"
-      ]
+      "inputs": ["default", "{workspaceRoot}/.eslintrc.json"]
     },
     "docker:build": {
-      "dependsOn": [
-        "prebuild",
-        "build",
-        "postbuild"
-      ]
+      "dependsOn": ["prebuild", "build", "postbuild"]
     }
   },
   "generators": {
