feat(dsg) upgrage prisma version to v4

--- a/packages/amplication-data-service-generator/package.json
+++ b/packages/amplication-data-service-generator/package.json
@@ -16,10 +16,12 @@
     "camel-case": "4.1.2",
     "fast-glob": "3.2.10",
     "lodash": "4.17.21",
+    "nestjs-prisma": "^0.19.0",
     "param-case": "3.0.4",
     "pascal-case": "3.1.2",
     "pluralize": "8.0.0",
     "prettier": "2.1.2",
+    "prisma": "^4.6.1",
     "prisma-schema-dsl": "1.1.5",
     "recast": "0.20.5",
     "replace-ext": "2.0.0",
@@ -30,7 +32,7 @@
   "devDependencies": {
     "@apollo/client": "3.6.9",
     "@babel/types": "^7.19.4",
-    "@prisma/client": "3.15.2",
+    "@prisma/client": "^4.6.1",
     "@testing-library/react": "11.2.7",
     "@types/base-64": "1.0.0",
     "@types/bcrypt": "5.0.0",
