--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "passport-jwt": "^4.0.0",
     "php-serialize": "^4.0.2",
     "pluralize": "^8.0.0",
-    "prisma-schema-dsl": "^1.1.5",
+    "prisma-schema-dsl": "1.1.5",
     "query-string": "^7.1.1",
     "rc": "^1.2.8",
     "react-animate-height": "^3.0.4",
