--- a/packages/amplication-client/project.json
+++ b/packages/amplication-client/project.json
@@ -17,9 +17,7 @@
     },
     "build": {
       "executor": "@nrwl/webpack:webpack",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
         "compiler": "babel",
@@ -47,9 +45,7 @@
             "output": "/scripts"
           }
         ],
-        "styles": [
-          "packages/amplication-client/src/index.scss"
-        ],
+        "styles": ["packages/amplication-client/src/index.scss"],
         "scripts": [],
         "webpackConfig": "@nrwl/react/plugins/webpack"
       },
@@ -85,9 +81,7 @@
         "open": true,
         "port": 3001
       },
-      "dependsOn": [
-        "prebuild"
-      ],
+      "dependsOn": ["prebuild"],
       "configurations": {
         "development": {
           "buildTarget": "amplication-client:build:development"
@@ -100,20 +94,14 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "packages/amplication-client/**/*.{ts,tsx,js,jsx}"
-        ]
+        "lintFilePatterns": ["packages/amplication-client/**/*.{ts,tsx,js,jsx}"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/packages/amplication-client"
-      ],
+      "outputs": ["coverage/packages/amplication-client"],
       "options": {
         "jestConfig": "packages/amplication-client/jest.config.ts",
         "passWithNoTests": true
@@ -123,9 +111,7 @@
       "executor": "@nx-tools/nx-docker:build",
       "options": {
         "push": false,
-        "tags": [
-          "amplication/client:latest"
-        ]
+        "tags": ["amplication/client:latest"]
       }
     }
   },
