--- a/packages/amplication-data-service-generator/project.json
+++ b/packages/amplication-data-service-generator/project.json
@@ -13,7 +13,7 @@
       ],
       "outputs": ["{projectRoot}/node_modules"],
       "options": {
-        "commands": ["npm install"],
+        "commands": ["npm ci"],
         "parallel": false,
         "cwd": "packages/amplication-data-service-generator"
       }
@@ -36,7 +36,7 @@
       ],
       "outputs": ["{projectRoot}/node_modules"],
       "options": {
-        "commands": ["npm install"],
+        "commands": ["npm ci"],
         "parallel": false,
         "cwd": "packages/amplication-data-service-generator"
       }
