--- a/packages/amplication-data-service-generator/package.json
+++ b/packages/amplication-data-service-generator/package.json
@@ -20,7 +20,7 @@
     "pascal-case": "3.1.2",
     "pluralize": "8.0.0",
     "prettier": "2.1.2",
-    "prisma-schema-dsl": "1.1.5",
+    "prisma-schema-dsl": "^1.1.8-alpha.1",
     "recast": "0.20.5",
     "replace-ext": "2.0.0",
     "semver": "7.3.5",
