--- a/packages/amplication-code-gen-types/package.json
+++ b/packages/amplication-code-gen-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@amplication/code-gen-types",
-  "version": "1.1.4-alpha.1",
+  "version": "1.1.6",
   "description": "This library supplies all the contracts for Amplication Code Generation. The purpose is to make the contracts available for inclusion in plugins.",
   "main": "src/index.js",
   "author": {
@@ -13,7 +13,7 @@
     "ast-types": "^0.14.2",
     "json-schema": "0.4.0",
     "lodash": "^4.17.21",
-    "prisma-schema-dsl": "1.1.5",
+    "prisma-schema-dsl-types": "^1.0.2",
     "type-fest": "0.11.0",
     "winston": "3.8.2"
   }
