--- a/packages/amplication-data-service-generator/package.json
+++ b/packages/amplication-data-service-generator/package.json
@@ -20,7 +20,7 @@
     "pascal-case": "3.1.2",
     "pluralize": "8.0.0",
     "prettier": "2.1.2",
-    "prisma-schema-dsl": "1.1.5",
+    "prisma-schema-dsl": "^1.2.1",
     "recast": "0.20.5",
     "replace-ext": "2.0.0",
     "semver": "7.3.5",
@@ -63,6 +63,7 @@
     "jest-mock-extended": "^2.0.4",
     "normalize-path": "3.0.0",
     "npm-run-all": "4.1.5",
+    "prisma-schema-dsl-types": "^1.0.2",
     "rxjs": "7.5.6",
     "sleep-promise": "9.1.0",
     "ts-node": "^10.9.1",
