fix(dsg): postbuild script

--- a/packages/amplication-data-service-generator/project.json
+++ b/packages/amplication-data-service-generator/project.json
@@ -56,8 +56,7 @@
     "postbuild": {
       "executor": "nx:run-commands",
       "options": {
-        "commands": ["ts-node scripts/copy-files.ts"],
-        "parallel": false,
+        "command": "ts-node scripts/copy-files.ts",
         "cwd": "packages/amplication-data-service-generator"
       }
     },
