--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -38,6 +38,10 @@
       "@amplication/nest-logger-module/*": [
         "packages/amplication-nest-logger-module/src/*"
       ],
+      "@amplication/plugin-api": [
+        "packages/amplication-plugin-api/src/index.ts"
+      ],
+      "@amplication/plugin-api/*": ["packages/amplication-plugin-api/src/*"],
       "@amplication/prisma-db": ["packages/amplication-prisma-db/src/index.ts"],
       "@amplication/prisma-db/*": ["packages/amplication-prisma-db/src/*"],
       "@primer/react/deprecated": ["node_modules/@primer/react/lib/deprecated"]
