chore(deps): remove redundant craco dependency (#4418)
* chore(deps): remove redundant craco dependency

* chore: add missing direct dependency assert

* update package lock files

* chore: fix format and update snapshot to match new files format

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "ajv-errors": "^1.0.1",
     "analytics-node": "^4.0.1",
     "apollo-server-express": "^3.10.2",
+    "assert": "^2.0.0",
     "ast-types": "^0.14.2",
     "bcrypt": "^5.0.1",
     "chalk": "^5.1.2",
@@ -149,7 +150,6 @@
     "zlib": "^1.0.5"
   },
   "devDependencies": {
-    "@craco/craco": "^6.4.5",
     "@graphql-codegen/cli": "2.6.3",
     "@graphql-codegen/typescript": "2.4.1",
     "@nestjs/cli": "^8.2.8",
