remove build-nx

--- a/packages/amplication-plugin-api/project.json
+++ b/packages/amplication-plugin-api/project.json
@@ -48,7 +48,7 @@
     "serve": {
       "executor": "@nrwl/node:node",
       "options": {
-        "buildTarget": "amplication-plugin-api:build-nx",
+        "buildTarget": "amplication-plugin-api:build",
         "inspect": true,
         "port": 9229
       },
