--- a/packages/amplication-plugin-api/project.json
+++ b/packages/amplication-plugin-api/project.json
@@ -61,7 +61,7 @@
     "db:prisma:generate": {
       "executor": "nx:run-commands",
       "outputs": [
-        "node_modules/@amplication/prisma-clients/amplication-plugin-api"
+        "../../../node_modules/@amplication/prisma-clients/amplication-plugin-api"
       ],
       "options": {
         "command": "prisma generate --schema ./prisma/schema.prisma",
