chore(nx): leverage nx to automatically detect dependencies

--- a/nx.json
+++ b/nx.json
@@ -1,5 +1,10 @@
 {
   "extends": "nx/presets/npm.json",
+  "pluginsConfig": {
+    "@nrwl/js": {
+      "analyzeSourceFiles": true
+    }
+  },
   "npmScope": "amplication",
   "affected": {
     "defaultBase": "master"
