--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -2,13 +2,14 @@ name: Continuous Integration (Nx - Affected)
 
 on:
   workflow_dispatch:
-  push:
-    paths-ignore:
-      - "**/*.md"
-      - ".all-contributorsrc"
+    inputs:
+      nx-base:
+        type: string
+        description: Commit SHA, branch or tag name used by Nx in the affected jobs. 
+        required: true
+        default: next
   pull_request_target:
-    branches: ["next", "master"]
-    types: [opened, reopened]
+    types: [opened, reopened, synchronize]
     paths-ignore:
       - "**/*.md"
       - ".all-contributorsrc"
@@ -30,7 +31,7 @@ jobs:
 
       - uses: nrwl/nx-set-shas@v3
         with:
-          main-branch-name: ${{ github.base_ref || 'next' }}
+          main-branch-name: ${{ github.base_ref || github.event.inputs.nx-base }}
 
       - name: Cache node modules
         id: cache
@@ -92,7 +93,7 @@ jobs:
           fetch-depth: 0
       - uses: nrwl/nx-set-shas@v3
         with:
-          main-branch-name: next
+          main-branch-name: ${{ github.base_ref || github.event.inputs.nx-base }}
 
       - name: Cache node modules
         id: cache
