--- a/packages/amplication-data-service-generator/project.json
+++ b/packages/amplication-data-service-generator/project.json
@@ -88,6 +88,13 @@
         "cwd": "packages/amplication-data-service-generator"
       }
     },
+    "generate-local-code": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "ts-node ./src/generate-code.ts ./input.json ./generated",
+        "cwd": "packages/amplication-data-service-generator"
+      }
+    },
     "docker:build": {
       "executor": "@nx-tools/nx-docker:build",
       "options": {
