--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "docker:dev": "docker-compose -f docker-compose.dev.yml --env-file .env.docker-compose up",
     "db:migrate:deploy": "nx run-many --target=db:migrate:deploy",
     "prepare": "husky install",
-    "precommit": "lint-staged",
-    "dsaf": "npx nx generate-code amplication-data-service-generator"
+    "precommit": "lint-staged"
   },
   "lint-staged": {
     "*": [
