add remove:generated to test data service

--- a/packages/amplication-data-service-generator/project.json
+++ b/packages/amplication-data-service-generator/project.json
@@ -83,8 +83,16 @@
     "generate:test-data-service": {
       "executor": "nx:run-commands",
       "outputs": ["{projectRoot}/generated"],
+      "dependsOn": ["remove:generated"],
       "options": {
         "command": "ts-node -P tsconfig.app.json scripts/generate-test-data-service.ts generated",
+        "cwd": "packages/amplication-data-service-generator"
+      }
+    },
+    "remove:generated": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "rm -r generated",
         "cwd": "packages/amplication-data-service-generator"
       }
     },
