feat(dsg): create input json file

--- a/packages/amplication-data-service-generator/project.json
+++ b/packages/amplication-data-service-generator/project.json
@@ -88,12 +88,20 @@
         "cwd": "packages/amplication-data-service-generator"
       }
     },
+    "generate-input-json": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "ts-node ./scripts/create-input-json.ts",
+        "cwd": "packages/amplication-data-service-generator"
+      }
+    },
     "generate-local-code": {
       "executor": "nx:run-commands",
       "options": {
         "command": "ts-node ./src/generate-code.ts ./input.json ./generated",
         "cwd": "packages/amplication-data-service-generator"
-      }
+      },
+      "dependsOn": ["generate-input-json"]
     },
     "docker:build": {
       "executor": "@nx-tools/nx-docker:build",
