--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -32,9 +32,9 @@ CREATE_PR_REQUEST_TOPIC="internal.create-pr.request.0"
 CREATE_PR_SUCCESS_TOPIC="internal.create-pr.success.0"
 CREATE_PR_FAILURE_TOPIC="internal.create-pr.failure.0"
 
-CODE_GENERATION_REQUEST_TOPIC="internal.code-generation.request.0"
-CODE_GENERATION_SUCCESS_TOPIC="internal.code-generation.success.0"
-CODE_GENERATION_FAILURE_TOPIC="internal.code-generation.failure.0"
+CODE_GENERATION_REQUEST_TOPIC="build.internal.code-generation.request.1"
+CODE_GENERATION_SUCCESS_TOPIC="build.internal.code-generation.success.1"
+CODE_GENERATION_FAILURE_TOPIC="build.internal.code-generation.failure.1"
 
 DSG_LOG_TOPIC="internal.dsg-log.0"
 
