--- a/packages/amplication-build-manager/.env
+++ b/packages/amplication-build-manager/.env
@@ -16,3 +16,6 @@ DSG_RUNNER_URL="http://localhost:12000/example"
 
 BUILD_ARTIFACTS_FOLDER=/home/eugene/dsg-jobs
 RESOURCE_DATA_FILE_NAME=input.json
+
+# Default env
+DSG_JOBS_RESOURCE_DATA_FILE="input.json"
