--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,8 @@ on:
         type: string
         required: true
         default: next
+env:
+ BRANCH_NAME: ${{ github.head_ref || github.ref_name }} 
 
 jobs:
   validate-image:
@@ -51,9 +53,6 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_OLD_ACCOUNT }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_OLD_ACCOUNT }}
           aws-region: us-east-1
-      - name: set branch-name
-        run: |
-          echo "BRANCH_NAME=$(echo $GITHUB_REF_NAME | sed "s/[^a-zA-Z0-9]/-/g")" >> $GITHUB_ENV
       - name: check if image exists for the branch name
         id: check-image
         run: |
@@ -94,11 +93,6 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_OLD_ACCOUNT }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_OLD_ACCOUNT }}
           aws-region: us-east-1
-      - name: set branch-name
-        run: |
-          echo "BRANCH_NAME=$(echo $GITHUB_REF_NAME | sed "s/[^a-zA-Z0-9]/-/g")" >> $GITHUB_ENV
-        env:
-          SOURCE_BRANCH_NAME: ${{ inputs.source-branch }}
       - name: calculate docker tags
         id: calculate-docker-tags
         run: |
