chore(nx): upgrade nx to v15.3.0

--- a/libs/util/nestjs/kafka/project.json
+++ b/libs/util/nestjs/kafka/project.json
@@ -1,6 +1,6 @@
 {
-  "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "name": "util-nestjs-kafka",
+  "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/util/nestjs/kafka/src",
   "projectType": "library",
   "targets": {
@@ -13,7 +13,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/util/nestjs/kafka"],
+      "outputs": ["{workspaceRoot}/coverage/libs/util/nestjs/kafka"],
       "options": {
         "jestConfig": "libs/util/nestjs/kafka/jest.config.ts",
         "passWithNoTests": true
