--- a/packages/amplication-data-service-generator/package.json
+++ b/packages/amplication-data-service-generator/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "main": "./main.js",
   "dependencies": {
+    "@amplication/plugin-db-postgres": "^1.1.4",
     "@babel/parser": "7.14.7",
     "@extra-set/difference": "2.2.4",
     "axios": "1.2.1",
