try to fix ci error

--- a/nx.json
+++ b/nx.json
@@ -44,7 +44,7 @@
     },
     "build": {
       "dependsOn": [
-        "^prebuild",
+        "prebuild",
         "^build",
         "db:prisma:generate",
         "^db:prisma:generate"
