--- a/packages/amplication-data-service-generator-fs-runner/Dockerfile
+++ b/packages/amplication-data-service-generator-fs-runner/Dockerfile
@@ -10,3 +10,6 @@ WORKDIR /workspace/packages/amplication-data-service-generator
 COPY ./dist/packages/amplication-data-service-generator/package.json .
 RUN npm i --omit-dev
 COPY ./dist/packages/amplication-data-service-generator .
+
+WORKDIR /workspace/packages/amplication-data-service-generator-fs-runner
+COPY ./dist/packages/amplication-data-service-generator-fs-runner .
