--- a/packages/amplication-data-service-generator/tsconfig.json
+++ b/packages/amplication-data-service-generator/tsconfig.json
@@ -21,7 +21,7 @@
   },
   "references": [
     {
-      "path": "./tsconfig.app.json"
+      "path": "./tsconfig.lib.json"
     },
     {
       "path": "./tsconfig.spec.json"
