--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -22,6 +22,12 @@
       "@amplication/code-gen-types/*": [
         "packages/amplication-code-gen-types/src/*"
       ],
+      "@amplication/data-service-generator": [
+        "packages/amplication-data-service-generator/src/index.ts"
+      ],
+      "@amplication/data-service-generator/*": [
+        "packages/amplication-data-service-generator/src/*"
+      ],
       "@amplication/design-system": [
         "packages/amplication-design-system/src/index.ts"
       ],
