--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "docker:dev": "docker-compose -f docker-compose.dev.yml --env-file .env.docker-compose up",
     "db:migrate:deploy": "nx run-many --target=db:migrate:deploy",
     "prepare": "husky install",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "help": "nx help"
   },
   "lint-staged": {
     "*": [
