chore(nx): define convention for nx libraries

--- a/nx.json
+++ b/nx.json
@@ -79,5 +79,9 @@
       }
     }
   },
+  "workspaceLayout": {
+    "appsDir": "packages",
+    "libsDir": "libs"
+  },
   "defaultProject": "amplication-client"
 }
