add POSTGRES_DB to docker env file

--- a/.env.docker-compose
+++ b/.env.docker-compose
@@ -4,3 +4,4 @@ JWT_SECRET=jwt-secret
 SERVICE_JWT_SECRET=service-jwt-secret
 BCRYPT_SALT_OR_ROUNDS=10
 CONTAINER_BUILDER_DEFAULT=docker
+POSTGRES_DB=amplication
