--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,11 +11,10 @@ services:
     volumes:
       - postgres:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready"]
+      test: ["CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}"]
       interval: 10s
       timeout: 5s
       retries: 5
-
   kafka-ui:
     container_name: kafka-ui
     image: provectuslabs/kafka-ui:latest
