--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -4,7 +4,7 @@ DEBUG_MODE=1
 NODE_ENV=development
 
 # Postgres
-POSTGRESQL_URL=postgresql://admin:admin@localhost:5432/${SERVICE_DB_NAME}
+POSTGRESQL_URL=postgresql://admin:admin@localhost:5432/amplication
 POSTGRESQL_USER=admin
 POSTGRESQL_PASSWORD=admin
 SERVICE_DB_NAME=amplication
