--- a/packages/amplication-data-service-generator/src/server/static/.gitignore
+++ b/packages/amplication-data-service-generator/src/server/static/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-
+prisma/generated-prisma-client
 /node_modules
 /dist
 .DS_Store
