feat(dsg) update generated ts-config to support path to the generated-prisma-client folder

--- a/packages/amplication-data-service-generator/src/server/static/tsconfig.json
+++ b/packages/amplication-data-service-generator/src/server/static/tsconfig.json
@@ -14,7 +14,11 @@
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "strict": true
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {
+      "generated-prisma-client": ["prisma/generated-prisma-client/index"]
+    }
   },
-  "include": ["src"]
+  "include": ["src", "scripts"]
 }
