feat(dsg) fix ts-config

--- a/packages/amplication-data-service-generator/src/server/static/tsconfig.json
+++ b/packages/amplication-data-service-generator/src/server/static/tsconfig.json
@@ -20,5 +20,5 @@
       "generated-prisma-client": ["prisma/generated-prisma-client/index"]
     }
   },
-  "include": ["src", "scripts"]
+  "include": ["src"]
 }
