fix(utils): add package.json

--- a/libs/util/code-gen-utils/package.json
+++ b/libs/util/code-gen-utils/package.json
@@ -1,4 +1,7 @@
 {
   "name": "@amplication/code-gen-utils",
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "dependencies": {
+    "recast": "^0.22.0"
+  }
 }
