--- a/libs/util/code-gen-utils/project.json
+++ b/libs/util/code-gen-utils/project.json
@@ -4,6 +4,19 @@
   "sourceRoot": "libs/util/code-gen-utils/src",
   "projectType": "library",
   "targets": {
+    "install": {
+      "executor": "nx:run-commands",
+      "inputs": [
+        "{projectRoot}/package.json",
+        "{projectRoot}/package-lock.json"
+      ],
+      "outputs": ["{projectRoot}/node_modules"],
+      "options": {
+        "commands": ["npm ci"],
+        "parallel": false,
+        "cwd": "libs/util/code-gen-utils"
+      }
+    },
     "build": {
       "executor": "@nrwl/js:tsc",
       "outputs": ["{options.outputPath}"],
