--- a/packages/amplication-data-service-generator/package.json
+++ b/packages/amplication-data-service-generator/package.json
@@ -5,6 +5,7 @@
   "main": "./main.js",
   "scripts": {},
   "dependencies": {
+    "@amplication/plugin-auth": "^0.0.1",
     "@amplication/plugin-auth-basic": "^1.2.2",
     "@amplication/plugin-auth-jwt": "^1.1.2",
     "@amplication/plugin-broker-kafka": "^0.2.2",
