--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -14,7 +14,7 @@ services:
       test:
         [
           "CMD-SHELL",
-          "pg_isready -d $${POSTGRESQL_DB_NAME} -U $${POSTGRES_USER}",
+          "pg_isready -d $${POSTGRESQL_DB_NAME} -U $${POSTGRESQL_USER}",
         ]
       interval: 10s
       timeout: 5s
