--- a/packages/amplication-data-service-generator/package.json
+++ b/packages/amplication-data-service-generator/package.json
@@ -42,6 +42,7 @@
     "@types/replace-ext": "2.0.0",
     "@types/semver": "7.3.9",
     "@types/supertest": "2.0.12",
+    "assert": "^2.0.0",
     "babel-eslint": "10.1.0",
     "babylon": "^6.18.0",
     "base-64": "1.0.0",
@@ -60,9 +61,11 @@
     "normalize-path": "3.0.0",
     "npm-run-all": "4.1.5",
     "prisma-schema-dsl-types": "^1.0.5",
+    "react-admin": "^4.6.2",
     "rxjs": "7.5.6",
     "sleep-promise": "9.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "winston-transport": "^4.5.0"
   }
 }
